<resources>
    <string name="app_name">London Baby!</string>

    <string name="action_notes">Notes</string>

    <string name="title_activity_detailed">Settings</string>
    <string name="title_activity_notes">Notes</string>

    <string name="abbaeiotououestminster">Αββαείο του Ουέστμινστερ</string>
    <string name="anaktoroTouMpakinxam">Ανάκτορο του Μπάκινχαμ</string>
    <string name="bretanikoMouseio">Βρετανικό Μουσείο</string>
    <string name="piccardiSquare">Piccadilly Circus</string>
    <string name="purgosTouLondinou">Πύργος του Λονδίνου</string>
    <string name="londonEye">London Eye</string>
    <string name="stPaulsCathedral">Καθεδρικός ναός Αγίου Παύλου</string>
    <string name="madameTussads">Madame Tussauds</string>
    <string name="londonTowerBridge">London Tower Bridge</string>
    <string name="mouseioFusikisIstorias">Μουσείο Φυσικής Ιστορίας</string>
    <string name="bigBen">Big Ben</string>
    <string name="harrods">Harrods</string>
    <string name="selfridges">Selfridges</string>
    <string name="albertMemorial">Μνημείο Αλμπέρτου</string>
    <string name="royalAlbertHall">Royal Albert Hall</string>
    <string name="marpleArch">Marple Arch</string>
    <string name="shard">The Shard</string>
    <string name="statueOfEros">Το άγαλμα του Έρωτα (Anteros)</string>
    <string name="chinatown">Chinatown</string>
    <string name="platform934">Πλατφόρμα 9 3/4</string>
    <string name="madison">Madison</string>
    <string name="flyersDelight">Fryer\'s Delight</string>


</resources>