<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_main_abbaeiotououestminster"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/abbaeio_tou_ouestminster"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/abbaeiotououestminster"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_anaktorotoumpakinxam"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/anaktoro_tou_mpakinxam"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/anaktoroTouMpakinxam"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_bretanikomouseio"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/bretaniko_mouseio"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bretanikoMouseio"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_mouseiofusikisistorias"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/mouseio_fusikis_istorias"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mouseioFusikisIstorias"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_bigBen"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/big_ben"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bigBen"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_harrods"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/harrods"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/harrods"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_selfridges"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/selfridges"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selfridges"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_main_piccardisquare"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/piccardi_square"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/piccardiSquare"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_purgostoulondinou"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/purgos_tou_londinou"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/purgosTouLondinou"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_londoneye"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/london_eye"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/londonEye"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_madametussads"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/madame_tussads"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/madameTussads"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_londontowerbridge"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/london_tower_bridge"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/londonTowerBridge"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_albertmemorial"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/albert_memorial"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/albertMemorial"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_royalalberthall"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/royal_ambert_hall"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/royalAlbertHall"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_marplearch"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/marple_arch"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/marpleArch"
                android:layout_marginBottom="5dp"/>

            <ImageView
                android:id="@+id/imageview_main_stpaulscathedral"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/st_pauls_cathedral"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stPaulsCathedral"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>